# todocaml

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  todocaml.opam
lib/: app.ml  datetime.ml  datetime.mli  dune  io.ml  io.mli  model.ml  model.mli  storage.ml  storage.mli  task.atd  task.ml  task.mli  ui.ml  ui.mli
test/: dune
